fixed word-wrapping

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -16,9 +16,8 @@ body {
     flex: 1 1 auto;
     flex-direction: column;
     align-items: stretch;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    word-break: break-all;
+    overflow-wrap: anywhere;
+    word-wrap: anywhere;
 }
 
 /* Remove br's in place as fallback without CSS */
@@ -255,6 +254,7 @@ body > #home .container {
     background-color: #B295FF;
     padding: 20px;
     font-size: 20px;
+	word-break: break-all;
 }
 
 /* Make container fill body */
